# src/main/resources/openapi/documentation.yaml
@@ -4,9 +4,9 @@ info:
   description: "SusGameBackend API"
   version: "1.0.0"
 servers:
-  - url: "http://0.0.0.0:8080"
+- url: "0.0.0.0"
 paths:
-  /game:
+  /games:
     get:
       description: ""
       responses:
@@ -46,15 +46,15 @@ paths:
               examples:
                 Example#1:
                   value: "Customer stored correctly"
-  /game/{id}:
+  /games/{id}:
     delete:
       description: ""
       parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
       responses:
         "400":
           description: "Bad Request"
@@ -83,11 +83,11 @@ paths:
     get:
       description: ""
       parameters:
-        - name: "id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
       responses:
         "400":
           description: "Bad Request"
@@ -113,6 +113,44 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Game"
+  /chat:
+    get:
+      description: ""
+      parameters:
+      - name: "Connection"
+        in: "header"
+        required: true
+        description: "Websocket Connection parameter"
+        schema:
+          type: "string"
+      - name: "Upgrade"
+        in: "header"
+        required: true
+        description: "Websocket Upgrade parameter"
+        schema:
+          type: "string"
+      - name: "Sec-WebSocket-Key"
+        in: "header"
+        required: true
+        description: "Websocket Sec-WebSocket-Key parameter"
+        schema:
+          type: "string"
+      responses:
+        "101":
+          description: "Switching Protocols"
+          headers:
+            Connection:
+              required: true
+              schema:
+                type: "string"
+            Upgrade:
+              required: true
+              schema:
+                type: "string"
+            Sec-WebSocket-Accept:
+              required: true
+              schema:
+                type: "string"
 components:
   schemas:
     Game:
@@ -121,4 +159,4 @@ components:
         name:
           type: "string"
       required:
-        - "name"
+      - "name"
